<resources>
    <!-- Application -->
    <string name="app_name">Iconoblast !</string>
    <string name="app" translatable="false">APPLICATION</string>
    <string name="icob" translatable="false">ICONOBLAST !</string>
    <string name="icoc" translatable="false">ICONOCLASTE</string>
    <string name="icoetetagere">Ico &amp; Étagère</string>
    <string name="other">AUTRES</string>
    <string name="communicate">COMMUNIQUER</string>
    <string name="version" translatable="false">Version 1.0.0.20</string>
    <string name="easter" translatable="false">Easter Egg</string>
    <string name="descriptionImage">Logo de la chaîne et de l\'application Iconoblast !</string>
    <string name="des" translatable="false">Logo Youtube</string>
    <string name="stat">Statistiques</string>
    <string name="delta">Deltarune</string>
    <string name="share">Partager l\'application</string>

    <!-- Activity main -->
    <string name="text">COUCOU LES COPAINS ET LES COPINES !</string>
    <string name="text2">Bienvenue sur cette application soundbox Iconoblast non officielle (sans liens affiliés Instant Gaming).</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search_toolbar" translatable="false">No available</string>

    <!-- Toolbar -->
    <string name="settings">Paramètres</string>
    <string name="search">Rechercher&#8230;</string>
    <string name="info" translatable="false">Informations</string>

    <!-- Drawer -->
    <string name="acceuil">Accueil</string>
    <string name="ddlc" translatable="false">Doki Doki Litterature Club</string>
    <string name="sDdlc" translatable="false">DDLC</string>
    <string name="mgt" translatable="false">Mad Games Tycoon</string>
    <string name="sMgt" translatable="false">MGT</string>
    <string name="yoshi" translatable="false">Yoshi\'s Island</string>
    <string name="bloodborn" translatable="false">Bloodborn</string>
    <string name="amour" translatable="false">Amour Sucré</string>
    <string name="marioMaker" translatable="false">Super Mario Maker 1 et 2</string>
    <string name="sonic" translatable="false">Sonic the Hedgehog</string>
    <string name="pokemon" translatable="false">Pokémon Let\s Go Pikachu</string>
    <string name="versus" translatable="false">Iconoblast ! - Versus</string>
    <string name="zelda" translatable="false">Zelda</string>
    <string name="ascuns" translatable="false">Ascuns</string>
    <string name="bug">Signaler un Bug</string>

    <!-- DDLC Activity -->
    <string name="ken1">C\'est parce que j\'veux ken !!! (Étagère)</string>
    <string name="tete">MAIS BORDEL, ÇA VA PAS LA TÊTE ?! (Ico)</string>
    <string name="haha" translatable="false">HAHA !!! (Étagère)</string>
    <string name="baka" translatable="false">BAAAAKA !!! (Ico)</string>
    <string name="cailloux">CAILOOOOOUUUXXX !!! (encore Ico…)</string>
    <string name="censuré">Actuellement, je pense encore à… (Ico)</string>
    <string name="censuré2">Donc tu devais peut-être… (Étagèrito)</string>
    <string name="morceaumdr">CRACHE LE MORCEAU, ENCULÉ !!! (Ico)</string>
    <string name="attention">Hey ! Fait attention… (Étagère)</string>
    <string name="etagere" translatable="false">Étagere_sound.ogg</string>
    <string name="ico" translatable="false">Iconoclaste_sound.ogg</string>
    <string name="mmm" translatable="false">MMMMMMH !!! (Étagère)</string>
    <string name="genial">GÉNIAL !!! (Étagère)</string>
    <string name="non" translatable="false">Non ! NOOOOOON !!! (Ico)</string>
    <string name="supers" translatable="false">SUPER !!! (Étagère)</string>
    <string name="experimenters">Tu ne devrai pas avoir peur d\'expérimenter ! (Étagère.exe)</string>
    <string name="pardons">(Censuré) oh pardon, c\'est sorti tout seul ! (Ico)</string>
    <string name="rires">Rire (pas) diabolique (Grand Étagère)</string>
    <string name="baisers">Pour baiser ! POUR BAISER ! (Ico)</string>
    <string name="merdes">Tu dis que de la merde ! SUPER ! (Ico et Étagère)</string>

    <!-- Mag Games Tycoon Activity -->
    <string name="degueulasse">Mais c\'est dégueulasse Addictio&#8230; (Ico)</string>
    <string name="gueule">Mais ta gueule !!! (Ico)</string>
    <string name="branleur">C\'est un immense branleur ! (Étagère)</string>
    <string name="mais">Maaaaiiis, où c\'est qui vont aller se masturber ? (Étagère)</string>
    <string name="doigt">Lui, il fait des doigts d\'honneur devant les portes ! (Étagère)</string>
    <string name="baises">Tu vois là, on est baisés ! (Ico)</string>
    <string name="cock">TOUCH MY COCK !!! (Ico et Étagère)</string>

    <!-- Zelda Activity -->
    <string name="zeldabutton" translatable="false">ZELDA !!! (Ico)</string>
    <string name="chanson1">Chanson Ico et Étagère</string>

    <!-- Ascuns Activity -->
    <string name="salut">SALUUUUUUUUUTTT !!!!! (Ico)</string>

    <!-- Infos Activity -->
    <string name="creation">Application créée et développée par: *Tintin !</string>
    <string name="sound">Téléchargement et regroupement des sons par: Kor1 !</string>
    <string name="descriptionTintin">Photo du compte Google de *Tintin</string>
    <string name="descriptionLulu">Photo du compte Xbox de DouleurTulipe38</string>
    <string name="tintin" translatable="false">*Tintin</string>
    <string name="lulu" translatable="false">DouleurTulipe38</string>
    <string name="goster" translatable="false">Goster_</string>
    <string name="licences">Licences</string>
    <string name="gif">android-gif-drawable</string>
    <string name="opus">opuscodec</string>
    <string name="statusbar">StatusBarUtil</string>
    <string name="intent">intent animation</string>
    <string name="click">Voici les plugins utilisés dans l\'application. Ils sont tous sous Apache Licence 2.0 (utilisation gratuite)</string>
    <string name="lulu2">N\'a pas de réseaux sociaux et vous emmerde (c\'est lui qui m\'a dit de mettre ça) !</string>
    <string name="majLicence">AppUpdater</string>
    <string name="picasso">Picasso</string>
    <string name="animatoo">Animatoo</string>

    <!-- Thème Activity -->
    <string name="themes">Thèmes</string>
    <string name="themen">Thème de Base</string>
    <string name="theme2">Thème Dark et Désabusé !</string>
    <string name="list">Liste</string>
    <string name="grille">Grille</string>
    <string name="maj">Mise à Jour</string>
    <string name="gdrive">Vérifier sur GitHub !</string>
    <string name="design">Affichage</string>
    <string name="auto">Automatiquement</string>
    <string name="manuel">Manuellement</string>
    <string name="wip">Les thèmes seront bientôt de retour !</string>

    <!-- Easter Egg Activity -->
    <string name="code">Entrez un code secret</string>
    <string name="check">Valider</string>

    <!-- Stat Fragment -->
    <string name="gift">Récompense quoditienne</string>
    <string name="giftButton" translatable="false">Check In</string>
    <string name="time">Temps restant:</string>
    <string name="Vtime" translatable="false">69:12:42</string>
    <string name="statDdlc" translatable="false">Doki Doki Litterature Club:</string>
    <string name="statMGT" translatable="false">Mad Games Tycoon:</string>
    <string name="statZelda" translatable="false">Zelda:</string>
    <string name="statAscuns" translatable="false">Ascuns:</string>
    <string name="statDELTA">Deltarune:</string>
    <string name="value" translatable="false">0</string>

    <!-- Deltarune Fragment -->
    <string name="guerrierdelta">Guerriers Delta !!! (Ico et Étagère)</string>
    <string name="kris">KRISEUH ! (Ico)</string>

    <!-- Search Activity -->
    <string name="nothing">Impossible de trouver ce son&#8230; &#128549;</string>

    <!-- Ermite Fragment -->
    <string name="ermitem">Livin\' in the city</string>

</resources>
