<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/dialog_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:padding="20dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ddlc"
            android:textSize="@dimen/radioButtonText" />

        <RadioButton
            android:id="@+id/rad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mgt"
            android:textSize="@dimen/radioButtonText" />

        <RadioButton
            android:id="@+id/rad3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delta"
            android:textSize="@dimen/radioButtonText" />

        <RadioButton
            android:id="@+id/rad4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zelda"
            android:textSize="@dimen/radioButtonText" />

        <RadioButton
            android:id="@+id/rad5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ascuns"
            android:textSize="@dimen/radioButtonText" />

    </RadioGroup>

</LinearLayout>