<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/titleText"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/giftButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giftButton"
                android:textSize="@dimen/text"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="center"
            android:textColor="@color/dGreen"
            android:textSize="@dimen/text"
            android:visibility="gone"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vtime"
            android:gravity="center"
            android:textColor="@color/dGreen"
            android:visibility="gone"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:layout_marginBottom="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            android:gravity="center"
            android:textColor="@color/dGreen"
            android:textSize="@dimen/titleText"
            android:textStyle="bold"
            android:visibility="gone"/>

    </TableLayout>

</ScrollView>