<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".IcoFragment">

        <TextView
            android:id="@+id/textViewLicence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/click"
            android:textColor="@color/colorPrimarySaintValantin"
            android:textSize="@dimen/iconoblastText" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/textViewLicence"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/gifText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/gif"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/cardView1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/opusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/opus"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/cardView3"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/statusbar"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/cardView4"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/intentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/intent"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card6"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/cardView5"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/majText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/majLicence"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/card6"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/marginBottomSize"
            app:cardCornerRadius="4dp"
            app:elevation="4dp">

            <TextView
                android:id="@+id/picassoText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/picasso"
                android:textSize="@dimen/buttonDefault" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>

